fix(creative_cell) align creative cell text to the left to fix spacing issue

--- a/app/modules/rl.cpi/campaign/creative-metrics/creative-cell/creative-cell.scss
+++ b/app/modules/rl.cpi/campaign/creative-metrics/creative-cell/creative-cell.scss
@@ -3,9 +3,10 @@
 @import "font-awesome";
 
 .creative_cell {
-  // font-size: 2em;
+
   p {
     margin : 0;
+    text-align: left;
   }
 
   .headline,
